add, some styles for each error and some validations

--- a/style.css
+++ b/style.css
@@ -14,3 +14,7 @@ h1 {
 .form-campo {
     margin: 10px 0px ;
 }
+
+#cName-error, #email-error, #tel-error, #address-error, #cep-error, #cpf-error  {/*isso é para estilizar a mensagem de error dos elementos*/
+    color: red;
+}
