--- a/source/main.scss
+++ b/source/main.scss
@@ -1,11 +1,11 @@
 @use '../source/dist/config/reset';
-@use '../source/dist/config/variables';
+@use '../source/dist/config/v' as v;
 @use '../source/dist/sections/header';
 @use '../source/dist/sections/products';
 
 
 body {
-  background-color: variables.$corBackGroundPage;
+  background-color: v.$corBackGroundPage;
 }
 
 .container {
@@ -22,7 +22,7 @@ section {
   padding: 56px 0;
 }
 
-@media screen and (max-width:variables.$tablet) {
+@media screen and (max-width:v.$tablet) {
   .container {
     max-width: 80%;
   }
