add variables as v on main.scss

--- a/source/main.scss
+++ b/source/main.scss
@@ -1,5 +1,5 @@
 @use '../source/dist/config/reset';
-@use '../source/dist/config/v' as v;
+@use '../source/dist/config/variables' as v;
 @use '../source/dist/sections/header';
 @use '../source/dist/sections/products';
 
